--- a/css/style.css
+++ b/css/style.css
@@ -15,21 +15,21 @@
 
 .row {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     
 }
 
 .box {
     height: 50px;
-    width: calc(100% - 3px);
+    width: calc(100% - 4px);
     color: white;
     background-color: rgb(46, 150, 255);
-    margin: 1px 1.5px;
+    margin: 2px 2px;
     padding: 15px 0px;
     text-align: center;
 }
 
-.first-box {
+.space {
     margin-top: 50px;
 }
 
@@ -41,3 +41,4 @@
     padding: 7px 1px;
     text-align: center;
 }
+
